Functional backend and database connection adjustments